<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/replik"
    tools:context="com.replik.peksansevkiyat.PaletteAdd">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixty"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/replik"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/replik_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/test_user"
                    android:textColor="@color/white_light" />

                <TextView
                    android:id="@+id/txtMenuName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_palette_add"
                    android:textColor="@color/white_light" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imgSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four"
                android:layout_weight="0"
                android:backgroundTint="@color/replik"
                android:contentDescription="@string/empty"
                app:srcCompat="@drawable/ic_icon_settings"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fragment_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtSearch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty"
                    android:layout_marginLeft="@dimen/forty"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_marginRight="@dimen/twenty"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white_light"
                    android:ems="10"
                    android:hint="@string/barcode"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_light" />

                <TextView
                    android:id="@+id/lblBoxCount"
                    android:layout_width="@dimen/fifty"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:layout_marginEnd="@dimen/ten"
                    android:layout_weight="0"
                    android:text="0"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/twenty_fife"
                android:layout_marginLeft="@dimen/ten"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginRight="@dimen/ten"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/five"
                    android:layout_marginTop="@dimen/five"
                    android:layout_marginRight="@dimen/five"
                    android:layout_weight="2"
                    android:text="@string/seri"
                    android:textColor="@color/white_light"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/five"
                    android:layout_marginTop="@dimen/five"
                    android:layout_marginRight="@dimen/five"
                    android:layout_weight="2"
                    android:text="@string/stock_code"
                    android:textColor="@color/white_light"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/five"
                    android:layout_marginTop="@dimen/five"
                    android:layout_marginRight="@dimen/five"
                    android:layout_weight="3"
                    android:text="@string/quantity"
                    android:textColor="@color/white_light"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <ListView
                android:id="@+id/lstData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/ten"
                android:layout_marginRight="@dimen/ten"
                android:layout_marginBottom="@dimen/five"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnPalletPrint"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty"
                android:layout_margin="@dimen/ten"
                android:layout_weight="0"
                android:text="@string/print_pallet" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>