<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnumerationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixty"
            android:background="@color/replik"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/replik"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/replik_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/test_user"
                    android:textColor="@color/white_light" />

                <TextView
                    android:id="@+id/txtMenuName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_order"
                    android:textColor="@color/white_light" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/refresh_button"
                android:layout_width="@dimen/forty"
                android:layout_height="@dimen/forty"
                android:layout_marginLeft="@dimen/eight"
                android:layout_marginTop="@dimen/eight"
                android:layout_marginRight="@dimen/eight"
                android:layout_weight="0"
                android:background="@android:drawable/ic_popup_sync"
                android:contentDescription="@string/empty"
                android:scaleType="fitXY"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fragment_bg"
            android:padding="@dimen/fragment_horizontal_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question_product_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_is_product"
                    android:textColor="@color/white_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/eight"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/question_product_title">

                    <Button
                        android:id="@+id/button_no"
                        style="?android:attr/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/eight"
                        android:layout_weight="1"
                        android:backgroundTint="@color/muted"
                        android:text="@string/no"
                        android:textColor="@color/white_light" />

                    <Button
                        android:id="@+id/button_yes"
                        style="?android:attr/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/replik_700"
                        android:textColor="@color/white"
                        android:text="@string/yes" />

                </LinearLayout>

                <!--<Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></Button>-->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>