<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/replik"
    tools:context=".RawMaterial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixty"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/replik"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/replik_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/test_user"
                    android:textColor="@color/white_light" />

                <TextView
                    android:id="@+id/txtMenuName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_raw_material"
                    android:textColor="@color/white_light" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imgSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four"
                android:layout_weight="0"
                android:backgroundTint="@color/replik"
                android:contentDescription="@string/empty"
                app:srcCompat="@drawable/ic_icon_settings"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/replik"
            app:tabTextColor="@color/white_light" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

