<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/replik"
    tools:context=".ShipmentCustomerListActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixty"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/replik"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/replik_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/test_user"
                    android:textColor="@color/white_light" />

                <TextView
                    android:id="@+id/txtMenuName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_list"
                    android:textColor="@color/white_light" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imgSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four"
                android:layout_weight="0"
                android:backgroundTint="@color/replik"
                android:contentDescription="@string/empty"
                app:srcCompat="@drawable/ic_icon_settings"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fragment_bg">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/customer_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/eight" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pnlProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#2AE1E1E1">

                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>